add color option setting

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>AML Store</title>
   </head>
   <body>
+    <div class="settings p-relative">
+      <div class="setting-gear">
+        <i class="fa fa-gear fa-solid"></i>
+      </div>
+      <div class="colors">
+        <h3>Color</h3>
+        <ul>
+          <li data-color="#f59e0b" class="active"></li>
+          <li data-color="#0075ff"></li>
+          <li data-color="#22c55e"></li>
+          <li data-color="#f44336"></li>
+        </ul>
+      </div>
+    </div>
     <!-- start hero -->
     <div class="hero p-relative" id="hero">
       <div class="overlay"></div>
